--- a/deployments/Jenkinsfile
+++ b/deployments/Jenkinsfile
@@ -43,8 +43,8 @@ pipeline {
             steps {
                 script {
                     withSonarQubeEnv(credentialsId: 'jenkins-sonarqube-token') {
-                        // Pastikan sonar-scanner terinstal dan dapat diakses
-                        sh 'sonar-scanner -Dsonar.projectKey=gopatungan-backend -Dsonar.sources=./cmd/gopatungan -Dsonar.go.coverage.reportPaths=coverage.out'
+                        sh 'go test -coverprofile=coverage.out ./...'
+                        sh 'sonar-scanner -Dsonar.projectKey=gopatungan-backend -Dsonar.sources=. -Dsonar.go.coverage.reportPaths=coverage.out'
                     }
                 }
             }
