--- a/deployments/Jenkinsfile
+++ b/deployments/Jenkinsfile
@@ -43,16 +43,18 @@ pipeline {
         stage("SonarQube Analysis") {
             steps {
                 script {
-                    sh '''
-                        docker run --rm \
-                            -e SONAR_HOST_URL="https://sonarqube.glanze.site/" \
-                            -e SONAR_LOGIN=$SONAR_TOKEN \
-                            -v "$(pwd):/usr/src" \
-                            sonarsource/sonar-scanner-cli \
-                            -Dsonar.projectKey=gopatungan-backend \
-                            -Dsonar.sources=. \
-                            -Dsonar.go.coverage.reportPaths=coverage.out
-                    '''
+                    withSonarQubeEnv(credentialsId: 'jenkins-sonarqube-token') {
+                        sh '''
+                            docker run --rm \
+                                -e SONAR_HOST_URL="https://sonarqube.glanze.site/" \
+                                -e SONAR_LOGIN=$SONAR_TOKEN \
+                                -v "$(pwd):/usr/src" \
+                                sonarsource/sonar-scanner-cli \
+                                -Dsonar.projectKey=gopatungan-backend \
+                                -Dsonar.sources=. \
+                                -Dsonar.go.coverage.reportPaths=coverage.out
+                        '''
+                    }
                 }
             }
         }
