Fix CI/CD: Add SonarQube User Token #2

--- a/deployments/Jenkinsfile
+++ b/deployments/Jenkinsfile
@@ -51,7 +51,8 @@ pipeline {
                             sonarsource/sonar-scanner-cli \
                             -Dsonar.projectKey=gopatungan-backend \
                             -Dsonar.sources=. \
-                            -Dsonar.go.coverage.reportPaths=coverage.out
+                            -Dsonar.go.coverage.reportPaths=coverage.out \
+                            -X
                     '''
                 }
             }
