--- a/deployments/Jenkinsfile
+++ b/deployments/Jenkinsfile
@@ -70,7 +70,7 @@ pipeline {
             steps {
                 script {
                     docker.withRegistry('', DOCKER_PASS) {
-                        docker_image = docker.build("${IMAGE_NAME}")
+                        docker_image = docker.build("${IMAGE_NAME}", "-f build/Dockerfile .")
                     }
                     docker.withRegistry('', DOCKER_PASS) {
                         docker_image.push("${IMAGE_TAG}")
